--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Developed By <a href="https://mazharul-islam.web.app/">Shoukat Bhowhaya Shovo</a> | <span class="far fa-copyright"></span> 
+        <span>Developed By <a href="">Shoukat Bhowhaya Shovo</a> | <span class="far fa-copyright"></span> 
         <script type="text/javascript">var year = new Date();document.write(year.getFullYear());</script>
         All rights reserved.</span>
     </footer>
