--- a/pFolio-main/index.html
+++ b/pFolio-main/index.html
@@ -7,9 +7,9 @@
     <meta property="og:image" content="https://mazharul-islam.web.app/images/portfolio1.jpg" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://mazharul-islam.web.app/" />
-    <meta property="og:title" content="Portfolio of Mazharul Islam, A Self-motivated and confident web developer" />
-    <meta property="og:description" content="Mazharul Islam | A self-motivated and confident Web Developer. Able to do any web and programming related task by handling difficulties smoothly in any given time. Have a reasonable skill on Front-End and Back-End development." /> 
-    <title>Mazharul Islam | Web Developer</title>
+    <meta property="og:title" content="Portfolio of Shoukat Bhowhaya Shovo, A Self-motivated and confident web developer" />
+    <meta property="og:description" content="Shoukat Bhowhaya Shovo | A self-motivated and confident Web Developer. Able to do any web and programming related task by handling difficulties smoothly in any given time. Have a reasonable skill on Front-End and Back-End development." /> 
+    <title>Shoukat Bhowhaya Shovo | Web Developer</title>
     <link rel="icon" href="images/favicon.ico" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
@@ -54,7 +54,7 @@
                     <div class="text-1">
                         <img src="images/wave.gif" width="80px" alt=""><br> Hello there, I am
                     </div>
-                    <div class="text-2">Mazharul Islam</div>
+                    <div class="text-2">Shoukat Bhowhaya Shovo</div>
                     <div class="text-3">And I'm a <span class="home-line-break"> <br> </span> <span class="typing"></span></div>
                     <div class="home-btn">
                         <a target="_blank" href="https://www.linkedin.com/in/md-mazharul-islam-225064183/" title="Download Resume">Hire Me</a>
@@ -366,22 +366,22 @@
                 <div class="column left">
                     <div class="text">Get in Touch</div>
                     <div class="contact-icon">
-                        <a title="Mazharul Islam on LinkedIn" href="https://www.linkedin.com/in/md-mazharul-islam-225064183/" target="_blank"> <i class="fab fa-linkedin"></i> </a>
-                        <a title="Mazharul Islam on GitHub" href="https://github.com/Maaazhar" target="_blank"> <i class="fab fa-github-square"></i> </a>
-                        <a title="Mazharul Islam on Code pen" href="https://codepen.io/maaazhar" target="_blank"> <i class="fab fa-codepen"></i> </a>
-                        <a title="Mazharul Islam on Code sand box" href="https://codesandbox.io/u/Maaazhar" target="_blank"> 
+                        <a title="Shoukat Bhowhaya Shovo on LinkedIn" href="https://www.linkedin.com/in/md-mazharul-islam-225064183/" target="_blank"> <i class="fab fa-linkedin"></i> </a>
+                        <a title="Shoukat Bhowhaya Shovo on GitHub" href="https://github.com/Maaazhar" target="_blank"> <i class="fab fa-github-square"></i> </a>
+                        <a title="Shoukat Bhowhaya Shovo on Code pen" href="https://codepen.io/maaazhar" target="_blank"> <i class="fab fa-codepen"></i> </a>
+                        <a title="Shoukat Bhowhaya Shovo on Code sand box" href="https://codesandbox.io/u/Maaazhar" target="_blank"> 
                             <!-- <img src="images/codesandbox.svg"  alt="">  -->
                             <svg fill="#c72041" height="43" viewBox="0 0 23 23" width="43" xmlns="http://www.w3.org/2000/svg"><g clip-rule="evenodd" ><path d="m11.5 11.6166v11.1704c.1945 0 .3223-.0422.4969-.1419l8.9445-5.1111c.3531-.2024.4971-.5158.4971-.9229v-10.36419c0-.2042-.043-.32636-.1422-.49691l-9.5102 5.3735c-.1769.1011-.2861.2893-.2861.4931zm4.9691 6.4143c0 .2839-.1064.4259-.3549.5679l-2.9815 1.7037c-.2129.1419-.4969.071-.4969-.213v-7.5957c0-.2032.1788-.4665.3549-.5679l6.8149-3.90429c.1893-.10894.3549.06554.3549.28395v4.04634c0 .2097-.0989.3982-.284.4969l-3.0524 1.6327c-.1851.0987-.355.2871-.355.4969z" /><path d="m1.56152 16.611v-10.36416c0-.40759.21402-.7916.5679-.99383l8.66048-4.898146c.1866-.098883.4969-.141973.7099-.141973s.5415.052741.7099.141975l8.5895 4.898144c.1699.10042.4008.33172.4969.49692l-9.5124 5.39507c-.1769.1011-.2839.2931-.2839.4969v11.1451c-.1945 0-.3933-.0423-.5679-.142l-8.73149-5.0401c-.35389-.2023-.63889-.5863-.63889-.9939zm1.27778-8.30552v4.04632c0 .2839.07099.4259.35494.5679l2.98148 1.7037c.28395.142.35494.3549.35494.5679v2.8395c0 .2839.07099.4259.35494.5679l2.98148 1.7037c.28392.142.49692.071.49692-.213v-7.5956c0-.213-.071-.426-.3549-.5679l-6.67289-3.83338c-.21296-.14197-.49691-.07099-.49691.21296zm11.642-4.82716-2.6266 1.49074c-.2129.14198-.4969.14198-.7098 0l-2.62659-1.49074c-.17289-.09772-.39472-.09722-.5679 0l-3.26543 1.84568c-.28395.14198-.28395.42593 0 .5679l6.53082 3.76235c.1748.10006.3932.10006.5679 0l6.5309-3.76235c.213-.14197.284-.42592 0-.5679l-3.2654-1.84568c-.1732-.09722-.395-.09772-.5679 0z" /></g></svg>
                         </a>
-                        <!-- <a title="Mazharul Islam on Facebook" href="https://www.facebook.com/MAAAZHAAAR/" target="_blank"> <i class="fab fa-facebook-square"></i></a> -->
-                        <a title="Mazharul Islam on Twitter" href="https://twitter.com/maaazhaaar" target="_blank"> <i class="fab fa-twitter-square"></i> </a>
+                        <!-- <a title="Shoukat Bhowhaya Shovo on Facebook" href="https://www.facebook.com/MAAAZHAAAR/" target="_blank"> <i class="fab fa-facebook-square"></i></a> -->
+                        <a title="Shoukat Bhowhaya Shovo on Twitter" href="https://twitter.com/maaazhaaar" target="_blank"> <i class="fab fa-twitter-square"></i> </a>
                     </div>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
                             <div class="info">
                                 <div class="head">Full Name</div>
-                                <div class="sub-title">Md. Mazharul Islam</div>
+                                <div class="sub-title">Md. Shoukat Bhowhaya Shovo</div>
                             </div>
                         </div>
                         <div class="row">
@@ -435,7 +435,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Developed By <a href="https://mazharul-islam.web.app/">Mazharul Islam</a> | <span class="far fa-copyright"></span> 
+        <span>Developed By <a href="https://mazharul-islam.web.app/">Shoukat Bhowhaya Shovo</a> | <span class="far fa-copyright"></span> 
         <script type="text/javascript">var year = new Date();document.write(year.getFullYear());</script>
         All rights reserved.</span>
     </footer>
