--- a/blog.html
+++ b/blog.html
@@ -71,7 +71,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Developed By <a href="https://mazharul-islam.web.app/">Shoukat Bhowhaya Shovo</a> | <span class="far fa-copyright"></span> 
+        <span>Developed By <a href="https://shuvo794.github.io/my-Portfolio/">Shoukat Bhowhaya Shovo</a> | <span class="far fa-copyright"></span> 
         <script type="text/javascript">var year = new Date();document.write(year.getFullYear());</script>
         All rights reserved.</span>
     </footer>
