--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="https://mazharul-islam.web.app/images/portfolio1.jpg" />
+    <meta property="og:image" content="https://shuvo794.github.io/my-Portfolio/images/portfolio1.jpg" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://mazharul-islam.web.app/" />
+    <meta property="og:url" content="https://shuvo794.github.io/my-Portfolio/" />
     <meta property="og:title" content="Portfolio of Shoukat Bhowhaya Shovo, A Self-motivated and confident web developer" />
     <meta property="og:description" content="Shoukat Bhowhaya Shovo | A self-motivated and confident Web Developer. Able to do any web and programming related task by handling difficulties smoothly in any given time. Have a reasonable skill on Front-End and Back-End development." /> 
     <title>Shoukat  Bhowhaya Shovo | Web Developer</title>
@@ -94,6 +94,17 @@
         <div class="max-width">
             <h2 class="title">My services</h2>
             <div class="serv-content">
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-code"></i>
+                        <div class="text">Web Design</div>
+                        <ul style="text-align: left; margin-left: 2rem; margin-top: 1rem;">
+                            <li>Responsive Web Design</li>
+                            <li>React Web App Development</li>
+                            <li>MERN Stack Web App Development</li>
+                        </ul>
+                    </div>
+                </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-code"></i>
@@ -235,7 +246,7 @@
                             <li>Work/Project showcasing</li>
                         </ul>
                         <div class="project-link">
-                            <a href="https://mazharul-islam.web.app/" target="_blank">Live Demo</a>
+                            <a href="https://shuvo794.github.io/my-Portfolio/" target="_blank">Live Demo</a>
                             <a href="https://github.com/Maaazhar/pFolio" target="_blank">Source Code</a>
                         </div>
                     </div>
