--- a/pFolio-main/index.html
+++ b/pFolio-main/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="https://mazharul-islam.web.app/images/portfolio1.jpg" />
+    <meta property="og:image" content="https://shuvo794.github.io/my-Portfolio/images/portfolio1.jpg" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://mazharul-islam.web.app/" />
+    <meta property="og:url" content="https://shuvo794.github.io/my-Portfolio/" />
     <meta property="og:title" content="Portfolio of Shoukat Bhowhaya Shovo, A Self-motivated and confident web developer" />
     <meta property="og:description" content="Shoukat Bhowhaya Shovo | A self-motivated and confident Web Developer. Able to do any web and programming related task by handling difficulties smoothly in any given time. Have a reasonable skill on Front-End and Back-End development." /> 
     <title>Shoukat Bhowhaya Shovo | Web Developer</title>
@@ -253,7 +253,7 @@
                             <li>Work/Project showcasing</li>
                         </ul>
                         <div class="project-link">
-                            <a href="https://mazharul-islam.web.app/" target="_blank">Live Demo</a>
+                            <a href="https://shuvo794.github.io/my-Portfolio/" target="_blank">Live Demo</a>
                             <a href="https://github.com/Maaazhar/pFolio" target="_blank">Source Code</a>
                         </div>
                     </div>
@@ -435,7 +435,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Developed By <a href="https://mazharul-islam.web.app/">Shoukat Bhowhaya Shovo</a> | <span class="far fa-copyright"></span> 
+        <span>Developed By <a href="https://shuvo794.github.io/my-Portfolio/">Shoukat Bhowhaya Shovo</a> | <span class="far fa-copyright"></span> 
         <script type="text/javascript">var year = new Date();document.write(year.getFullYear());</script>
         All rights reserved.</span>
     </footer>
