--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
                     <div class="text-1">
                         <img src="images/wave.gif" width="80px" alt=""><br> Hello there, I am
                     </div>
-                    <div class="text-2">Shoukat Bhowhaya Shovo</div>
+                    <div class="text-2">Shoukat Bhowhaya
+                        <br> 
+                        <span>Shovo</span>
+                    </div>
                     <div class="text-3">And I'm a <span class="home-line-break"> <br> </span> <span class="typing"></span></div>
                     <div class="home-btn">
                         <a target="_blank" href="https://www.linkedin.com/in/shoukat-bhowhaya-shovo-890646220/" title="Download Resume">Hire Me</a>
@@ -251,7 +254,7 @@
                         </div>
                     </div>
                 </div> -->
-                <div class="card"  style="background-image: url(images/Panda.png); background-size: 100%; background-position: bottom; background-repeat: no-repeat;">
+                <div class="card"  style="background-image: url(images/Screenshot_2.png); background-size: 100%; background-position: bottom; background-repeat: no-repeat;">
                     <div class="box">
                         <div> 
                             <span class="text"> PENGUIN-FASHION </span>
@@ -264,7 +267,11 @@
                         </ul>
                         <div class="project-link">
                             <a href="https://infallible-swartz-fc742e.netlify.app/" target="_blank">Live Demo</a>
+                            
                             <a href="https://github.com/shuvo794/panda-web" target="_blank">Source Code</a>
+
+                          
+                            <a href="detals1.html" target="_blank">Detals</a>
                         </div>
                     </div>
                 </div>
@@ -282,6 +289,7 @@
                         <div class="project-link">
                             <a href="https://honda-cvr-assinment.netlify.app/" target="_blank">Live Demo</a>
                             <a href="https://github.com/shuvo794/honda-cbr" target="_blank">Source Code</a>
+                            <a href="detals2.html" target="_blank">Detals</a>
                         </div>
                     </div>
                 </div>
@@ -300,6 +308,7 @@
                         <div class="project-link">
                             <a href="https://watch-shop-f14ed.web.app/" target="_blank">Live Demo</a>
                             <a href="https://github.com/shuvo794/watch-shop-bd" target="_blank">Source Code</a>
+                            <a href="detals3.html" target="_blank">Detals</a>
                         </div>
                     </div>
                 </div>
