--- a/detals1.html
+++ b/detals1.html
@@ -40,31 +40,21 @@
     <!-- services section start -->
     <section class="services blog" id="services">
         <div class="max-width">
-            <h2 class="title">My Blogs</h2>
+            <h2 class="title">Project info</h2>
             <div class="serv-content">
                 <div class="card">
                     <div class="box">
                         <!-- <i class="fas fa-code"></i> -->
-                        <div class="text" style="color: palegoldenrod ">Web Developer Life</div>
-                        <p style="text-align: justify;">Learn how to build Azure Cosmos DB apps using Entity Framework Core by following this example that features search, read, update, and delete functionality with audits and more.</p>
+                       <img style="width: 100px;" src="/images/Screenshot_2.png" alt="">
+                       <img style="width: 100px;" src="/images/Screenshot_1.png" alt="">
+                       <img style="width: 100px;" src="/images/Screenshot_3.png" alt="">
+                        <p style="text-align: justify;"> . E-Commerce Winter Fashion Landing Page.</p>
+                        <p style="text-align: justify;">. that E-Commerce mainly used winter and many pepole can shoping</p>
+                        <p style="text-align: justify;">. Used : HTML5, CSS,Tailwind,Netlify.</p>
+                        
                     </div>
                 </div>
-                <div class="card">
-                    <div class="box">
-                        <!-- <i class="fas fa-laptop-medical"></i> -->
-                        <div class="text" style="color: palegoldenrod">A day and some bugs</div>
-                        <p style="text-align: justify;">Coming Soon</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <!-- <i class="fas fa-wifi"></i> -->
-                        <div class="text" style="color: palegoldenrod">Beautify your code</div>
-                        <p style="text-align: justify;">Coming Soon</p>
-                    </div>
-                </div>
-               </div>
-            </div>
+                
         </div>
     </section>
 
